--- a/assets/fac.css
+++ b/assets/fac.css
@@ -1,18 +1,14 @@
 
-.fac-Sider {
-    background-color: #FFFFFF;
-    border: 1px solid #dee2e6;
-    height: 100vh; 
-    overflow-y: scroll;
-}
-
-.fac-Content {
-    background-color: #FFFFFF;
-}
-
 .fac-Layout {
     height: calc(100vh - 90px);
     background-color: #FFFFFF;
+    border: 0px solid #FFFFFF;
+}
+
+.fac-Sider {
+    background-color: #FFFFFF;
+    /* border: 1px solid #dee2e6; */
+    overflow-y: scroll;
 }
 
 .fac-Layout .ant-layout-sider-trigger {
@@ -22,9 +18,12 @@
     border-radius: 10px;
 }
 
-    
+.fac-Content {
+    background-color: #FFFFFF;
+}
+
 .fuc-Grid {
-    width: calc(100vw - 260px);
+    height: 100%;
 }
 
 .fuc-Grid .feffery-grid-item-dragger{
