update: login and upload finished

--- a/assets/fac.css
+++ b/assets/fac.css
@@ -1,6 +1,6 @@
 
 .fac-Layout {
-    height: calc(100vh - 90px);
+    height: 94vh;
     background-color: #FFFFFF;
     border: 0px solid #FFFFFF;
 }
