--- a/assets/tab_overview.css
+++ b/assets/tab_overview.css
@@ -1,5 +1,3 @@
-
-
 .fac-Layout {
     height: 94vh;
     background-color: #FFFFFF;
@@ -53,3 +51,13 @@
 .fuc-div-plotPanel-gridItem {
     margin: -25px 0 0 0;
 }
+
+.dmc-Text-select-label-PlotPanel{
+    font-size: 12px;
+}
+
+.dmc-Text-select-label-sider{
+    font-size: 12px;
+}
+
+
